# VEEPort-STMicroelectronics-STM32F746G-DISCO-Zephyr

./: .gh.keep_binary  .gitignore  CHANGELOG.rst  Jenkinsfile.groovy  LICENSE.txt  README.rst  RELEASE_NOTES.rst
stm32f746g-Platform-CM7hardfp_GCC48-0.1.0/: .project
stm32f746g-Platform-CM7hardfp_GCC48-0.1.1/: .project
stm32f746g_zephyr-bsp/: .project
stm32f746g_zephyr-bsp/projects/microej/: CMakeLists.txt  README.rst  prj.conf  rename-sections.py
stm32f746g_zephyr-bsp/projects/microej/core/inc/: microej.h
stm32f746g_zephyr-bsp/projects/microej/core/src/: LLBSP_stm32.c  LLMJVM_ZephyrOS.c  microej.c  microej_time.c  microjvm_main.c
stm32f746g_zephyr-bsp/projects/microej/scripts/: build.bat  build.sh  run.bat  run.sh  set_local_env.bat.tpl  set_local_env.sh.tpl  set_project_env.bat  set_project_env.sh
stm32f746g_zephyr-configuration/: .project  configuration.xml  module.ant  module.ivy  module.properties  override.module.ant  stm32f746gdisco.platform
stm32f746g_zephyr-configuration/bsp/: bsp.properties
stm32f746g_zephyr-configuration/frontpanel/: frontpanel.properties
stm32f746g_zephyr-fp/: .classpath  .project  module.ivy
stm32f746g_zephyr-fp/src/main/resources/: stm32f746g_disco.fp
